# MicrosoftTaskClean

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  crossfilefuncts.cpp  crossfilefuncts.h  libsvmrank.cpp  libsvmrank.h  logreg.cpp  logreg.h  logregrank.cpp  logregrank.h  logregression.cpp  logregression.h  logregression2.cpp  logregression2.h  main.cpp  preprocessdata.cpp  preprocessdata.h  processdata.cpp  processdata.h
liblinear-ranksvm-1.95/: bodyfat_scale_qid.model  output  predict  ranksvm.cpp  svm-scale  train
libsvm-ranksvm-3.20/: bodyfat_scale_qid.model  svm-predict  svm-predict.c  svm-scale  svm-train  svm-train.c  svm.cpp  svm.h
